--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -30,9 +30,7 @@
 
 #sidebar {
     grid-column: 1 / 2;
-    height: 100%;
-    max-height: 100%;
-    overflow: hidden;
+    max-height: 90vh;
 }
 
 .navbar {
